# src/routes/index.js
@@ -4,5 +4,7 @@ const router = express.Router();
 router.use('/', require('./swagger'));
 router.use('/books', require('./books'))
 router.use('/users', require('./users'))
+router.use('/profile', require('./profile'))
+
 
 module.exports = router;
